Parallelized miner deployment

--- a/config.ini
+++ b/config.ini
@@ -4,3 +4,5 @@ keypair_path = ore_keypair.json
 rpc = https://api.mainnet-beta.solana.com
 priority_fee = 8
 threads = 4
+parallel_terminals = 16
+terminal_phase = 0.1
