--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,13 @@ keypair_path = ore_keypair.json
 rpc = https://api.mainnet-beta.solana.com
 priority_fee = 8
 threads = 4
-parallel_terminals = 16
-terminal_phase = 0.1
+
+[MINERS]
+; Number of parallel miners that will be deployed
+parallel_miners = 16
+
+; Delay between waves of miners in seconds
+miners_phase = 30
+
+; Number of miners per wave
+miners_wave = 4
