Added support for multiple wallets + other things

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,17 @@
 [ORE]
-keypair_path = ore_keypair.json
-
+; Folder path on which the keypairs are stored in.
+keypairs_path = .\keypairs
+; RPC used for the mining operations and other ore-cli commands.
 rpc = https://api.mainnet-beta.solana.com
-priority_fee = 8
+; Priority fee used for the mining operations and other ore-cli commands.
+priority_fee = 888
+; Number of threads used per instance of a miner.
 threads = 4
 
 [MINERS]
-; Number of parallel miners that will be deployed
-parallel_miners = 16
-
-; Delay between waves of miners in seconds
+; Number of parallel miners that will be deployed per keypair.
+parallel_miners = 6
+; Delay between waves of miners in seconds.
 miners_phase = 30
-
-; Number of miners per wave
-miners_wave = 4
+; Number of miners per wave of deployment.
+miners_wave = 2
