--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@
 keypairs_path = .\keypairs
 ; RPC used for the mining operations and other ore-cli commands.
 rpc = https://api.mainnet-beta.solana.com
+; If you want to add more and alternate please do it like this [rpc1, rpc2, rpc3, rpc4] instead of just [rpc1].
 ; Priority fee used for the mining operations and other ore-cli commands.
 priority_fee = 888
 ; Number of threads used per instance of a miner.
